<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- tela de login -->
    <string name="ajuda">Ajuda?</string>
    <string name="title_help">Precisa de ajuda?</string>
    <string name="help_text">Ligue para o plantão da DiTI (048)3271-1171 ou abra um SAU no site do CBMSC.</string>
    <string name="login_in"> Conectando </string>
    <string name="app_name">E-193</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Digite a mensagem</string>
    <string name="button_send">Enviar</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">Minha Mensagem</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_search">Busca</string>
    <string name="cadastros_button">" Cadastro"</string>
    <string name="guarnicao_button">" Guarnição"</string>
    <string name="ocorrencias_button">" Ocorrência"</string>
    <string name="ocorrencias_praia_button">" Praia"</string>
    <string name="pericia_button">" Perícia"</string>
    <string name="relatorios_button">" Relatório"</string>
    <string name="title_activity_not_implemented">NotImplementedActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_unavailable">UnavailableActivity</string>
    <string name="ok">Ok</string>
    <string name="title_activity_praia">PRAIA</string>
    <string name="gestao_button">" Gestão"</string>
    <string name="new_incident">" Nova Ocorrência"</string>
    <string name="notImplemented">Ainda não disponível</string>
    <string name="lorem_ipsum">nao sei</string>
    <string name="title_activity_screen_slide_pager">"INSERÇÃO"</string>
    <string name="preventions">" Editar Prevenção/Outros"</string>
    <string name="resources">" Atualizar Recursos"</string>
    <string name="beach_now">" Praia Agora"</string>
    <string name="title_activity_edition">Edição</string>
    <string name="edition">" Edição"</string>

    <!-- tela escolha cidade -->
    <string name="msg_servidor">Escolha a cidade na lista abaixo:</string>
    <string name="back">Voltar</string>
    <string name="please_hold"> Por favor, aguarde… </string>

    <!-- praia inserção wizard -->
    <string name="review">Resumo</string>
    <string name="next">Próximo</string>
    <string name="prev">Anterior</string>
    <string name="finish">Enviar</string>
    <string name="label_your_name">Nome</string>
    <string name="label_your_email">Email</string>
    <string name="label_victim_age">Idade</string>
    <string name="hint_your_name">e.g. Larry</string>
    <string name="hint_your_email">Optional</string>
    <string name="submit_confirm_message">Está tudo correto? Lembre-se que isso é fundamental pra melhoria do nosso serviço.</string>
    <string name="submit_confirm_button">Enviar</string>
    <string name="praia_insercao_wizard_name">NOVA OCORRÊNCIA</string>
    <string name="victim_gender_male">Masculino</string>
    <string name="victim_gender_female">Feminino</string>
    <string name="label_victim_gender">Sexo</string>
    <string name="label_victim_is_foreign">Estrangeiro</string>
    <string name="victim_is_foreign_true">Sim</string>
    <string name="victim_is_foreign_false">Não</string>
    <string name="label_nationality">País</string>
    <string name="bad_value">Valor inválido</string>
    <string name="label_state">Estado</string>
    <string name="label_address">Endereço</string>
    <string name="label_city">Cidade</string>
    <string name="label_incident_date">Data</string>
    <string name="label_incident_time">Horário</string>
    <string name="label_beach">Praia</string>
    <string name="label_lifeguard_post">Posto guarda-vida</string>
    <string name="gvm_search_hint">Nome ou matrícula</string>
    <string name="search">BUSCA</string>
    <string name="click_to_add">Toque para incluir</string>
    <string name="label_gvm_add">Guarda-vidas Militar</string>
    <string name="undo">Desfazer</string>
    <string name="gvc_search_hint">Nome ou CPF</string>
    <string name="history_hint">Digite o histórico da ocorrência...</string>
    <string name="label_incident_distance">Distância do posto</string>
    <string name="label_distance_left">Esquerda</string>
    <string name="label_distance">Distância do Posto (m)</string>

    <!-- beach now-->
    <string name="title_activity_beach_now">PRAIA AGORA</string>
    <string name="descr_image">Imagem</string>
    <string name="none">(NÃO INFORMADO)</string>
    <string name="choose_lifeguard_post">Escolha o local</string>
    <string name="select_an_item">Selecione uma opção...</string>
    <string name="last_modified">"Última modificação: "</string>
    <string name="select_flag">Bandeira no Posto</string>


    <!-- others-->
    <string name="username">Usuario:</string>
    <string name="password">Senha:</string>
    <string name="do_login">Fazer login</string>
    <string name="login">Login</string>
    <string name="black_flag">preta</string>
    <string name="red_flag">vermelha</string>
    <string name="yellow_flag">amarela</string>
    <string name="green_flag">verde</string>
    <string name="jelly_alert">Alerta de água-viva</string>
    <string name="activated">ativado</string>
    <string name="deactivated">desativado</string>
    <string name="water_temp_text">Temperatura da água</string>
    <string name="celcius">ºC</string>
    <string name="wind_direction">Direção do vento</string>
    <string name="wind_intesity">Intensidade do vento</string>
    <string name="south">sul</string>
    <string name="northwest">noroeste</string>
    <string name="east">leste</string>
    <string name="west">oeste</string>
    <string name="north">norte</string>
    <string name="southwest">sudoeste</string>
    <string name="southeast">sudeste</string>
    <string name="northeast">nordeste</string>
    <string name="low">fraco</string>
    <string name="medium">moderado</string>
    <string name="hight">forte</string>
    <string name="dangerous_location">Local Perigoso</string>
    <string name="whater_pic">Foto do mar</string>
    <string name="sand_pic">Foto da faixa de areia</string>
    <string name="notHorizontalPicAlert">A foto precisa ser horizontal (paisagem)</string>
</resources>
