<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/PraiaInsercaoWizardPageContainer">

    <ScrollView style="@style/DefaultScrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/PraiaInsercaoWizardPageTitle"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="16dp"
                android:text="@string/wind_direction" />

            <RadioGroup
                android:id="@+id/direction_above"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/south"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:drawableTop="@drawable/ic_wind_south"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:paddingTop="12dp"
                    android:layout_marginLeft="9dp"
                    android:text="@string/south"
                    android:gravity="center"/>

                <RadioButton
                    android:id="@+id/southeast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:drawableTop="@drawable/ic_wind_southeast"
                    android:gravity="center"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:paddingTop="12dp"
                    android:layout_marginLeft="12dp"
                    android:text="@string/southeast" />

                <RadioButton
                    android:id="@+id/southwest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:checked="false"
                    android:drawableTop="@drawable/ic_wind_southwest"
                    android:gravity="center"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:paddingTop="12dp"
                    android:text="@string/southwest"/>

                <RadioButton
                    android:id="@+id/north"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:drawableTop="@drawable/ic_wind_north"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:paddingTop="12dp"
                    android:text="@string/north"
                    android:gravity="center"/>
            </RadioGroup>

            <RadioGroup
                android:id="@+id/direction_below"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/northeast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:drawableTop="@drawable/ic_wind_northeast"
                    android:gravity="center"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:paddingTop="12dp"
                    android:text="@string/northeast"/>

                <RadioButton
                    android:id="@+id/northwest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:checked="false"
                    android:drawableTop="@drawable/ic_wind_northwest"
                    android:gravity="center"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:paddingTop="12dp"
                    android:text="@string/northwest"/>

                <RadioButton
                    android:id="@+id/east"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:drawableTop="@drawable/ic_wind_east"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:paddingTop="12dp"
                    android:layout_marginLeft="8dp"
                    android:text="@string/east"
                    android:gravity="center"/>

                <RadioButton
                    android:id="@+id/west"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:drawableTop="@drawable/ic_wind_west"
                    android:gravity="center"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:paddingTop="12dp"
                    android:layout_marginLeft="9dp"
                    android:text="@string/west"/>
            </RadioGroup>
            <TextView
                style="@style/PraiaInsercaoWizardPageTitle"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="16dp"
                android:text="@string/wind_intesity" />
            <RadioGroup
                android:id="@+id/intensity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/low"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:drawableTop="@drawable/ic_wind_intensity_low"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:paddingTop="12dp"
                    android:text="@string/low"/>

                <RadioButton
                    android:id="@+id/medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:drawableTop="@drawable/ic_wind_intensity_medium"
                    android:gravity="center"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:paddingTop="12dp"
                    android:text="@string/medium"/>

                <RadioButton
                    android:id="@+id/high"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:checked="false"
                    android:drawableTop="@drawable/ic_wind_intensity_high"
                    android:gravity="center"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:paddingTop="12dp"
                    android:text="@string/hight"/>
            </RadioGroup>

        </LinearLayout>
    </ScrollView>

</LinearLayout>