<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/cadastros_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cadastros_button"
                android:textSize="@dimen/activity_main_buttons_text"
                android:gravity="left|center_vertical"
                android:drawableLeft="@drawable/ic_cadastros"
                android:onClick="notImplemented"/>

            <Button
                android:id="@+id/guarnicao_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guarnicao_button"
                android:textSize="@dimen/activity_main_buttons_text"
                android:gravity="left|center_vertical"
                android:drawableLeft="@drawable/ic_guarnicao"
                android:onClick="notImplemented"/>

            <Button
                android:id="@+id/ocorrencias_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ocorrencias_button"
                android:textSize="@dimen/activity_main_buttons_text"
                android:gravity="left|center_vertical"
                android:drawableLeft="@drawable/ic_ocorrencias"
                android:onClick="notImplemented"/>

            <Button
                android:id="@+id/ocorrencias_praia_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ocorrencias_praia_button"
                android:textSize="@dimen/activity_main_buttons_text"
                android:gravity="left|center_vertical"
                android:onClick="startPraia"
                android:drawableLeft="@drawable/ic_ocorrencias_praia"/>

            <Button
                android:id="@+id/pericia_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pericia_button"
                android:textSize="@dimen/activity_main_buttons_text"
                android:gravity="left|center_vertical"
                android:drawableLeft="@drawable/ic_pericia"
                android:onClick="notImplemented"/>

            <Button
                android:id="@+id/relatorios_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/relatorios_button"
                android:textSize="@dimen/activity_main_buttons_text"
                android:gravity="left|center_vertical"
                android:drawableLeft="@drawable/ic_relatorios"
                android:onClick="notImplemented"/>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>