<!--
  Copyright 2013 Google Inc.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/PraiaInsercaoWizardPageContainer">

    <TextView style="@style/PraiaInsercaoWizardPageTitle" />

    <ScrollView android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:scrollbarStyle="outsideOverlay">

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView style="@style/PraiaInsercaoWizardFormLabel"
                android:text="@string/label_your_name" />

            <EditText android:id="@+id/victim_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:saveEnabled="false"
                android:inputType="textCapWords"
                android:layout_marginBottom="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView style="@style/PraiaInsercaoWizardFormLabel"
                        android:text="@string/label_victim_age" />

                    <EditText android:id="@+id/victim_age"
                        android:layout_width="200px"
                        android:layout_height="wrap_content"
                        android:saveEnabled="false"
                        android:inputType="textEmailAddress"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="40px">

                    <TextView style="@style/PraiaInsercaoWizardFormLabel"
                        android:text="@string/label_victim_gender" />

                    <RadioGroup
                        android:id="@+id/victim_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="20px">
                        <RadioButton
                            android:id="@+id/victim_gender_male"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/victim_gender_male"/>
                        <RadioButton
                            android:id="@+id/victim_gender_female"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/victim_gender_female"/>
                    </RadioGroup>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView style="@style/PraiaInsercaoWizardFormLabel"
                        android:text="@string/label_victim_is_foreign"
                        android:layout_width="wrap_content"/>

                    <RadioGroup
                        android:id="@+id/victim_is_foreign"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="20px">
                        <RadioButton
                            android:id="@+id/victim_is_foreign_true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/victim_is_foreign_true"/>
                        <RadioButton
                            android:id="@+id/victim_is_foreign_false"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/victim_is_foreign_false"/>
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="40px">

                    <TextView style="@style/PraiaInsercaoWizardFormLabel"
                        android:text="@string/label_nationality" />

                    <Spinner
                        android:id="@+id/victim_nationality"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20px">
                    </Spinner>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
