<LinearLayout
    style="@style/PraiaInsercaoWizardPageContainer"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        style="@style/PraiaInsercaoWizardPageTitle"
        android:text="@string/choose_lifeguard_post"/>

    <ScrollView
        style="@style/DefaultScrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/PraiaInsercaoWizardFormLabel"
                    android:text="@string/label_city"/>

                <Spinner
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="20px"
                    ></Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/PraiaInsercaoWizardFormLabel"
                    android:text="@string/label_beach"/>

                <Spinner
                    android:id="@+id/beach"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="20px"></Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/PraiaInsercaoWizardFormLabel"
                    android:text="@string/label_lifeguard_post"/>

                <Spinner
                    android:id="@+id/lifeguard_post"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20px"></Spinner>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>