<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent" android:layout_height="match_parent"
                android:background="@color/bg_dark_block">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/msg_servidor"
        android:id="@+id/tv_select_cidade"
        android:textSize="25sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:textAlignment="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/btn_next"
        android:textSize="25sp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/sp_cidades"
        android:layout_alignStart="@+id/sp_cidades"
        android:layout_marginBottom="30dp" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:id="@+id/sp_cidades"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/tv_select_cidade"
        android:layout_alignStart="@+id/tv_select_cidade"
        android:spinnerMode="dialog"
        android:layout_alignParentEnd="false"
        android:layout_marginRight="25dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/btn_back"
        android:layout_alignBottom="@+id/btn_next"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:enabled="true"
        android:textSize="25sp"
        android:layout_marginRight="25dp" />
</RelativeLayout>