<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--Button
                android:id="@+id/preventions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/preventions"
                android:textSize="@dimen/activity_main_buttons_text"
                android:gravity="left|center_vertical"
                android:drawableLeft="@drawable/ic_prevention"
                android:onClick="notImplemented"/-->

            <Button
                android:id="@+id/resources"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resources"
                android:textSize="@dimen/activity_main_buttons_text"
                android:gravity="left|center_vertical"
                android:drawableLeft="@drawable/ic_resources"
                android:onClick="notImplemented"/>

            <Button
                android:id="@+id/new_incident"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_incident"
                android:textSize="@dimen/activity_main_buttons_text"
                android:gravity="left|center_vertical"
                android:drawableLeft="@drawable/ic_insercao_ocorrencias_praia"
                android:onClick="startInsertion"/>

            <Button
                android:id="@+id/beach_now"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/beach_now"
                android:textSize="@dimen/activity_main_buttons_text"
                android:gravity="left|center_vertical"
                android:drawableLeft="@drawable/ic_beach_now"
                android:onClick="startBeachNow"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>